# hagtamp

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/api/: subsonic.ts
src/components/: WebampPlayer.tsx
src/components/MediaLibrary/: AlbumList.tsx  ArtistList.tsx  MediaLibrary.css  TrackList.tsx  index.tsx
src/components/Settings/: Settings.css  index.tsx
src/player/: mod.rs  subsonic.rs
src/skin/: mod.rs
src/store/: index.ts
src/types/: subsonic.ts
src/ui/: library.rs  mod.rs  player_window.rs  playlist.rs  settings.rs
