[package]
name = "hagtamp"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30"
egui = "0.30"
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
zip = "2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.7"
rodio = { version = "0.19", features = ["mp3", "vorbis", "flac"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"

[profile.release]
opt-level = 3
